<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Otvalboshki2"
    android:background="@drawable/component_24">


  <LinearLayout
      android:layout_width="325dp"
      android:layout_height="462dp"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.493"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.984">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="17sp"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="267dp" />

    <EditText
        android:id="@+id/textView7"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:background="@color/teal_200"
        android:text="@string/stroke1"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="290dp"
        android:autofillHints="username"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Surname"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:textSize="17sp"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="343dp" />

    <EditText
        android:id="@+id/textView8"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:background="@color/teal_200"
        android:text="@string/stroke2"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="366dp"
        android:autofillHints="username2"
        android:inputType="textPassword"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gmail"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:layout_marginTop="10dp"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="419dp" />

    <EditText
        android:id="@+id/textView9"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:background="@color/teal_200"
        android:text="@string/stroke3"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="442dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:textSize="17sp"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="496dp" />

    <EditText
        android:id="@+id/textView10"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:background="@color/teal_200"
        android:text="@string/stroke4"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="519dp"
        android:autofillHints="phone"
        android:inputType="textPhonetic" />

    <Button
        android:id="@+id/button3"
        android:layout_width="326dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:background="#FEF85F"
        android:text="@string/next2"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="583dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/account"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/welcome2"
        android:textSize="17sp"
        android:textColor="@color/yellow" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/next3"
        android:textColor="@color/white" />

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>