<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Otvalboshki3"
    android:background="@drawable/component_22">

    <LinearLayout
        android:layout_width="323dp"
        android:layout_height="349dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/number"
            android:textColor="@color/white"
            android:textSize="17sp"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="496dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="100dp">

            <EditText
                android:id="@+id/input_phone_number"
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:autofillHints="phone"
                android:background="@color/teal_700"
                android:text="@string/stroke4"
                android:textColor="@color/white"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="519dp"
                android:inputType="number"
                tools:ignore="LabelFor"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="326dp"
            android:layout_height="62dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="100dp"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/next_to_verify_code"
                android:layout_width="326dp"
                android:layout_height="62dp"
                android:background="#FEF85F"
                android:text="@string/next2"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>



        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="17sp"
            android:gravity="center"
            android:text="@string/registration4"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/registration3"
            android:textColor="@color/yellow"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/next3"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>