<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/component_7">

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="660dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/component_9__1_"
            android:contentDescription="@null"
            android:layout_marginBottom="300dp"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="72dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="288dp"
            android:layout_height="109dp"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="40sp"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="435dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="230dp"
            android:layout_height="41dp"
            android:text="@string/registration2"
            android:background="#FEF85F"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="624dp"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="229dp"
            android:layout_height="44dp"
            android:text="@string/registration"
            android:background="#FEF85F"
            tools:layout_editor_absoluteX="95dp"
            tools:layout_editor_absoluteY="562dp"
            android:layout_marginTop="9dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            tools:layout_editor_absoluteX="174dp"
            tools:layout_editor_absoluteY="691dp"
            android:textColor="@color/white"
            android:layout_marginTop="9dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>