<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Otvalboshki8"
    android:background="@drawable/component_31__1_">


    <LinearLayout
        android:layout_width="319dp"
        android:layout_height="503dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497">


        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/bublik" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:text="@string/bublik"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            app:srcCompat="@drawable/boriscoffee" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="303dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:text="@string/boris_coffee"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            app:srcCompat="@drawable/adrianocoffee" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adriano_coffee"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="391dp"
        android:layout_height="85dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984">

        <ImageView
    android:id="@+id/imageView2"
    android:layout_width="67dp"
    android:layout_height="67dp"
    app:srcCompat="@drawable/options"
    android:layout_marginStart="5dp"
    android:contentDescription="@null"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="641dp" />

        <ImageView
    android:id="@+id/imageView4"
    android:layout_width="67dp"
    android:layout_height="67dp"
    app:srcCompat="@drawable/places"
    android:contentDescription="@null"
    android:layout_marginStart="13dp"
    tools:layout_editor_absoluteX="95dp"
    tools:layout_editor_absoluteY="641dp" />

        <ImageView
    android:id="@+id/imageView"
    android:layout_width="67dp"
    android:layout_height="67dp"
    app:srcCompat="@drawable/home"
    android:contentDescription="@null"
    android:layout_marginStart="13dp"
    tools:layout_editor_absoluteX="172dp"
    tools:layout_editor_absoluteY="641dp" />

<ImageView
    android:id="@+id/imageView6"
    android:layout_width="67dp"
    android:layout_height="67dp"
    app:srcCompat="@drawable/search"
    android:contentDescription="@null"
    android:layout_marginStart="13dp"
    tools:layout_editor_absoluteX="252dp"
    tools:layout_editor_absoluteY="641dp" />

        <ImageView
    android:id="@+id/imageView5"
    android:layout_width="67dp"
    android:layout_height="67dp"
    android:contentDescription="@null"
    app:srcCompat="@drawable/profile"
    android:layout_marginStart="13dp"
    tools:layout_editor_absoluteX="328dp"
    tools:layout_editor_absoluteY="642dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984">

    <TextView
    android:id="@+id/textView17"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/menu2"
    android:layout_marginStart="13dp"
    android:textColor="@color/black"
    tools:layout_editor_absoluteX="25dp"
    tools:layout_editor_absoluteY="709dp" />

    <TextView
    android:id="@+id/textView19"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/menu3"
    android:layout_marginStart="35dp"
    android:textColor="@color/black"
    tools:layout_editor_absoluteX="95dp"
    tools:layout_editor_absoluteY="709dp" />

<TextView
    android:id="@+id/textView16"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/menu1"
    android:layout_marginStart="35dp"
    android:textColor="@color/black"
    tools:layout_editor_absoluteX="179dp"
    tools:layout_editor_absoluteY="708dp" />

<TextView
    android:id="@+id/textView21"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/menu5"
    android:layout_marginStart="30dp"
    android:textColor="@color/black"
    tools:layout_editor_absoluteX="265dp"
    tools:layout_editor_absoluteY="709dp" />

<TextView
    android:id="@+id/textView20"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/menu4"
    android:layout_marginStart="30dp"
    android:textColor="@color/black"
    tools:layout_editor_absoluteX="333dp"
    tools:layout_editor_absoluteY="708dp" />

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>