<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Otvalboshki10"
    android:background="@drawable/component_34">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="391dp"
        android:layout_height="85dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/options" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:layout_marginStart="13dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/places" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:layout_marginStart="13dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/home" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:layout_marginStart="13dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/search" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:layout_marginStart="13dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/profile" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="390dp"
        android:layout_height="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:text="@string/menu2"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:text="@string/menu3"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:text="@string/menu1"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/menu5"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/menu4"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="192dp"
        android:layout_marginBottom="144dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="169dp"
            android:layout_height="244dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/component_35" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information2"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>